--- a/launcher-menu.json
+++ b/launcher-menu.json
@@ -1,6 +1,18 @@
 {
   "menu": {
-    "serve": "serve"
+    "serve:Builds and serves your app, rebuilding on file changes.": "serve",
+    "tools": {
+      "code style": {
+        "check:Check files": [
+          "pretty:check || true",
+          "#lint:check || true"
+        ],
+        "write:Update files": [
+          "pretty:write",
+          "#lint:write"
+        ]
+      }
+    }
   },
   "options": {
     "menu": {
