--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Heerschop/wasm-experiment#readme",
   "devDependencies": {
     "@web/dev-server": "^0.1.35",
+    "eslint": "^8.28.0",
     "prettier": "^2.8.0",
     "script-launcher": "^1.37.3",
     "typescript": "^4.9.3"
