--- a/launcher-config.json
+++ b/launcher-config.json
@@ -10,6 +10,12 @@
         "wds --node-resolve --open --watch"
       ]
     ],
+    "build:wasms": [
+      "rm -rf ./src/examples/*.wasm",
+      "cpy --flat --rename=assembly-script.wasm './assembly-script/build/release.wasm'                       './src/examples'",
+      "cpy --flat                               './dotnet/bin/Debug/Release/net7.0/browser-wasm/dotnet.wasm' './src/examples'",
+      "cpy --flat --rename=emscripten-c.wasm    './emscripten-c/hello.wasm'                                  './src/examples'"
+    ],
     "lint:check": "eslint",
     "lint:write": "eslint --fix",
     "pretty:check": [
