--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "hello-wasm"
 version = "0.1.0"
-edition = "2021"
+authors = ["Your Name <you@example.com>"]
+description = "A sample project with wasm-pack"
+license = "MIT/Apache-2.0"
+repository = "https://github.com/yourgithubusername/hello-wasm"
+edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
+wasm-bindgen = "0.2"
