--- a/examples-ui/package.json
+++ b/examples-ui/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "description": "WASM Experiments UI",
   "scripts": {
-    "start": "rimraf dist && parcel",
-    "build": "rimraf dist && parcel build"
+    "start": "parcel",
+    "build": "parcel build"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,6 @@
   "homepage": "https://github.com/Heerschop/wasm-experiment#readme",
   "devDependencies": {
     "parcel": "^2.8.0",
-    "rimraf": "^3.0.2"
+    "parcel-reporter-clean-dist": "^1.0.4"
   }
 }
