--- a/assembly-script/package.json
+++ b/assembly-script/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node tests",
-    "asbuild:debug": "asc assembly/index.ts --target debug",
-    "asbuild:release": "asc assembly/index.ts --target release",
+    "asbuild:debug": "asc assembly/index.ts --target debug --outFile build/assembly-script-debug.wasm",
+    "asbuild:release": "asc assembly/index.ts --target release --outFile build/assembly-script-release.wasm",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release",
     "start": "npx serve ."
   },
