--- a/examples-ui/.parcelrc
+++ b/examples-ui/.parcelrc
@@ -1,4 +1,10 @@
 {
-  "extends": ["@parcel/config-default"],
-  "reporters":  ["...", "parcel-reporter-clean-dist"] // "..." is needed to include all other pipelines
+  "extends": [
+    "@parcel/config-default"
+  ],
+  "reporters": [
+    "...",
+    "parcel-reporter-clean-dist",
+    "parcel-reporter-copy-file-v2"
+  ]
 }
