--- a/wasm-inspector/tsconfig.json
+++ b/wasm-inspector/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "strict": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "lib": ["es2017", "dom"]
   }
 }
