--- a/assembly-script/asconfig.json
+++ b/assembly-script/asconfig.json
@@ -6,6 +6,12 @@
       "sourceMap": true,
       "debug": true
     },
+    "interpreter": {
+      "outFile": "build/interpreter.wasm",
+      "textFile": "build/interpreter.wat",
+      "sourceMap": true,
+      "debug": true
+    },
     "release": {
       "outFile": "build/release.wasm",
       "textFile": "build/release.wat",
