--- a/assembly-script/package.json
+++ b/assembly-script/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.13.0",
-    "assemblyscript": "^0.24.1"
+    "assemblyscript": "^0.24.1",
+    "typescript": "^4.9.5"
   },
   "type": "module",
   "exports": {
