--- a/assembly-script/package.json
+++ b/assembly-script/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^18.13.0",
     "assemblyscript": "^0.24.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "type": "module",
